samples/_failures_safe/1761243950_381f69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ece4a1a.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_1ece4a1a.c:151:55: error: missing terminating " character
  151 |         "IDENTIFIER", "NUMBER", "OPERATOR", "STRING", "EOF
      |                                                       ^~~~
./samples/SAFE/__tmp_1ece4a1a.c:151:9: error: expected expression at end of input
  151 |         "IDENTIFIER", "NUMBER", "OPERATOR", "STRING", "EOF
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_1ece4a1a.c:151:9: error: expected declaration or statement at end of input
